--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon-memory-game",
+  "name": "assignment4",
   "version": "1.0.0",
   "description": "COMP 2537 Assignment 4: Pokemon Memory Card Game",
   "main": "index.js",
